--- a/index.html
+++ b/index.html
@@ -2,73 +2,28 @@
 <html>
 <head>
   <title>Page Title</title>
-  <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-  <script> 
-    function computerPlay() {
-        let plays = ['rock', 'paper', 'scissors'];
+    <header>
+        <h1>Rock, paper, scissors</h1>
+    </header>
+    <main>
+        <div class="icons">
+            <input type="image" src="images/rock.png" class="button" id="rock-button" />
+            <input type="image" src="images/paper.png" class="button" id="paper-button" />
+            <input type="image" src="images/scissors.png" class="button" id="scissors-button" />
+        </div>
 
-        return plays[Math.floor(Math.random() * plays.length)];
-    }
+        <div class="score">
 
-    function playRound(playerSelection, computerSelection) {
-        if (playerSelection.toLowerCase() === computerSelection) {
-            return 'Draw! Nobody wins this round!';
-        }
+        </div>
+    </main>
 
-        if (playerSelection.toLowerCase() === 'rock') {
-            if (computerSelection === 'paper') {
-                return 'Computer wins!';
-            } else {
-                return 'You win!';
-            }
-        }
+    <footer>
 
-        if (playerSelection.toLowerCase() === 'paper') {
-            if (computerSelection === 'scissors') {
-                return 'Computer wins!'
-                computerWins++;
-            } else {
-                return 'You win!'
-                playerWins++;
-            }
-        }
-
-        if (playerSelection.toLowerCase() === 'scissors') {
-            if (computerSelection == 'rock') {
-                return 'Computer wins!'
-                computerWins++;
-            } else {
-                return 'You win!'
-                playerWins++;
-            }
-        }
-    }
-
-    function game() {
-        let playerWins = 0;
-        let computerWins = 0;
-
-        for (i=0; i<5; i++) {
-            const playerSelection = prompt('Rock, paper or scissors?');
-            const computerSelection = computerPlay();
-
-            const result = playRound(playerSelection, computerSelection);
-
-            if (result == 'Computer wins!') {
-                computerWins++;
-            } else if (result == 'You win!') {
-                playerWins++;
-            }
-
-            console.log(`Round ${i + 1} - Computer: ${computerSelection}, You: ${playerSelection}. ${result}
-            Total score - Computer: ${computerWins}, You: ${playerWins}`)
-        }
-    }
-
-    game()
-
-  </script>
+    </footer>
 </body>
+    <script type="text/javascript" src="script.js"></script>
 </html>
