Update of today

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>RPS-Game</title>
+
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,8 +18,10 @@
             <input type="image" src="images/scissors.png" class="button" id="scissors-button" />
         </div>
 
-        <div class="score">
-
+        <div class="data-div">
+            <div class="startmessage" id="startmessage">
+                <h2>Click on one of the pictures to start playing!</h2>
+            </div>
         </div>
     </main>
 
